# basilk

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  main.json  main2.json
.github/ISSUE_TEMPLATE/: ad-libitum.md  feature_request.md
.github/workflows/: lint_rust.yaml
old_demo/: 1main.rs  2main.rs  4main.rs  input.rs
src/: cli.rs  config.rs  globals.rs  json.rs  main.rs  migration.rs  project.rs  task.rs  ui.rs  util.rs  view.rs
